[package]
name = "dihedral"
version = "0.0.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Dihedral (torsion) angle calculations"
license = "GPL-3.0"
documentation = "https://docs.rs/dihedral"
repository = "https://github.com/TianyiShi2001/dihedral"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
