[package]
name = "dihedral"
version = "0.0.4"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Dihedral (torsion) angle calculations"
license = "MIT"
documentation = "https://docs.rs/dihedral"
repository = "https://github.com/TianyiShi2001/dihedral"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
f32 = []